# minimal_pubsub

./: .gitignore  CMakeLists.txt  README.md
src/: broker.hpp  channel.hpp  event.hpp  main.cpp
tests/: broker_test.cpp  channel_test.cpp
